MANEJO DE CONTRATOS Y TAREAS AUTOMATIZADAS